<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">



    <!-- alert -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/alarm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#cccccc" />
    </LinearLayout>


    <ScrollView android:id="@+id/contencrollView"
        android:layout_height="match_parent"
        android:layout_width="match_parent">



        <!-- detect status list -->
        <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="1dp">


            <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/human_exist"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:id="@+id/textView2" />

            <TextView android:id="@+id/human_exist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
                android:visibility="gone">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/human_num"
                android:textSize="16sp"
                android:id="@+id/textView4" />

            <TextView android:id="@+id/human_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"/>
        </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="gone">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alert frame"
                    android:textSize="16sp"
                    android:layout_marginRight="10dp"/>

                <TextView android:id="@+id/fnmv_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:textSize="16sp"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/detect_time"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/detect_time"
                    android:layout_marginLeft="20dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/is_human_bed" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="16dp"
                    android:id="@+id/is_human_bed"
                    android:layout_marginLeft="20dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detect_num"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:text="0"
                    android:id="@+id/detect_num"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detect_human_num"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:text="0"
                    android:id="@+id/detect_human_num"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_x"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:text="0"
                    android:id="@+id/min_x"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_y"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:text="0"
                    android:id="@+id/min_y"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_x"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:text="0"
                    android:id="@+id/max_x"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_y"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:text="0"
                    android:id="@+id/max_y"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/back_temp_state"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NO"
                    android:textSize="30dp"
                    android:id="@+id/back_temp_state"
                    android:layout_marginLeft="10dp"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/human_area"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/human_area"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/center_x"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="16dp"
                    android:id="@+id/center_x"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/center_y"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="16dp"
                    android:id="@+id/center_y"
                    android:layout_marginLeft="20dp" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>