<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/mode" />
        　　 <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/modeText"
            android:minWidth="100dip" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/bed_leftboard_value" />
    　　 <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/bed_leftboard_value"
            android:numeric="integer"
            android:minWidth="100dip" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/bed_rightboard_value" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:numeric="integer"
            android:id="@+id/bed_rightboard_value"
            android:minWidth="100dip" />
    </LinearLayout>


</LinearLayout>